# palenight

./: CMakeLists.txt  config.lua  particles.lua
assets/: endlessrunner_tileset.tsj
scripts/: beaver.lua  cf.lua  collectible.lua  collision.lua  gamestate.lua  main.lua  movement.lua  obstacle.lua  obstacle_spawning.lua  particle.lua  player.lua  starfield.lua  test.lua  utilities.lua
src/: game.cpp  game.hpp  main.cpp
src/components/: oscillation.hpp  transform.hpp
src/systems/: movement.cpp  movement.hpp
